--- a/src/binary/example.com_index.html
+++ b/src/binary/example.com_index.html
@@ -1,13 +1,13 @@
 HTTP/1.1 200 OK
 Accept-Ranges: bytes
-Age: 402392
+Age: 536357
 Cache-Control: max-age=604800
 Content-Type: text/html; charset=UTF-8
-Date: Tue, 08 Nov 2022 14:22:45 GMT
+Date: Wed, 09 Nov 2022 08:00:23 GMT
 Etag: "3147526947"
-Expires: Tue, 15 Nov 2022 14:22:45 GMT
+Expires: Wed, 16 Nov 2022 08:00:23 GMT
 Last-Modified: Thu, 17 Oct 2019 07:18:26 GMT
-Server: ECS (sab/56BC)
+Server: ECS (sab/56F3)
 Vary: Accept-Encoding
 X-Cache: HIT
 Content-Length: 1256
