--- a/src/binary/example.com_index.html
+++ b/src/binary/example.com_index.html
@@ -1,13 +1,12 @@
 HTTP/1.1 200 OK
-Accept-Ranges: bytes
-Age: 536357
+Age: 507262
 Cache-Control: max-age=604800
 Content-Type: text/html; charset=UTF-8
-Date: Wed, 09 Nov 2022 08:00:23 GMT
-Etag: "3147526947"
-Expires: Wed, 16 Nov 2022 08:00:23 GMT
+Date: Wed, 09 Nov 2022 08:41:22 GMT
+Etag: "3147526947+ident"
+Expires: Wed, 16 Nov 2022 08:41:22 GMT
 Last-Modified: Thu, 17 Oct 2019 07:18:26 GMT
-Server: ECS (sab/56F3)
+Server: ECS (sab/573F)
 Vary: Accept-Encoding
 X-Cache: HIT
 Content-Length: 1256
